--- a/src/ShaderStudio.csproj
+++ b/src/ShaderStudio.csproj
@@ -66,12 +66,6 @@
     <PackageReference Include="OpenTK.GLControl">
       <Version>3.0.0-pre</Version>
     </PackageReference>
-    <PackageReference Include="WpfGlslControl">
-      <Version>0.1.8</Version>
-    </PackageReference>
-    <PackageReference Include="WpfOpenGlControl">
-      <Version>0.2.46</Version>
-    </PackageReference>
     <PackageReference Include="Zenseless">
       <Version>0.3.131</Version>
     </PackageReference>
@@ -93,10 +87,12 @@
     <Compile Include="ShaderDocument\ShaderDocumentViewModel.cs" />
     <Compile Include="Modules\Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShaderViewPanelTool\IShaderViewPanelViewModel.cs" />
     <Compile Include="ShaderViewPanelTool\MenuDefinitions.cs" />
     <Compile Include="ShaderViewPanelTool\ShaderViewPanelCommandDefinition.cs" />
     <Compile Include="ShaderViewPanelTool\ShaderViewPanelCommandHandler.cs" />
     <Compile Include="ShaderViewPanelTool\ShaderViewPanelViewModel.cs" />
+    <Compile Include="ShaderViewPanelTool\ToolBarDefinitions.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppDesigner Include="Properties\" />
@@ -110,6 +106,16 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\WpfGlslControl\src\WpfGlslControl.csproj">
+      <Project>{50ED089B-AB09-4BF9-87BD-2934B76E5057}</Project>
+      <Name>WpfGlslControl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\WpfOpenGlControl\src\WpfOpenGlControl.csproj">
+      <Project>{48B5D6A6-3F23-4668-A585-A9E33900C99D}</Project>
+      <Name>WpfOpenGlControl</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
