--- a/src/ShaderStudio.csproj
+++ b/src/ShaderStudio.csproj
@@ -83,6 +83,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ShaderDocument\PersistedDocumentEx.cs" />
     <Compile Include="ShaderDocument\ShaderViewerProvider.cs" />
     <Compile Include="ShaderDocument\ShaderDocumentViewModel.cs" />
     <Compile Include="Modules\Module.cs" />
@@ -119,6 +120,9 @@
       <Project>{48B5D6A6-3F23-4668-A585-A9E33900C99D}</Project>
       <Name>WpfOpenGlControl</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\ShaderIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
